--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        
+        pip install -r ml_project/requirements.txt
+        pip install ml_project/.
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
